// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render 1`] = `
<BackgroundView>
  <View
    style={
      {
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "paddingHorizontal": 24,
        "width": "100%",
      }
    }
  >
    <Memo(Pressable)
      style={
        {
          "backgroundColor": "#049",
          "padding": 16,
        }
      }
    >
      <Text
        style={
          {
            "color": "#EEF",
          }
        }
      >
        Back
      </Text>
    </Memo(Pressable)>
    <View
      style={
        {
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "center",
        }
      }
    >
      <Text
        style={
          {
            "color": "#EEF",
            "fontSize": 30,
          }
        }
      />
    </View>
  </View>
  <ScrollView
    style={
      {
        "flex": 1,
        "gap": 8,
        "padding": 24,
      }
    }
  >
    <React.Fragment>
      <View
        style={
          {
            "width": "100%",
          }
        }
      >
        <View
          style={
            {
              "paddingBottom": "100%",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "backgroundColor": "#EEF",
                "borderRadius": 16,
                "bottom": 0,
                "display": "flex",
                "justifyContent": "center",
                "left": 0,
                "padding": 8,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
          >
            <ContinentSvg />
          </View>
        </View>
      </View>
      <Text
        style={
          {
            "color": "#EEF",
            "fontSize": 25,
          }
        }
      >
        Stats
      </Text>
      <Text
        style={
          {
            "color": "#EEF",
          }
        }
      >
        Two letter code: 
      </Text>
      <Text
        style={
          {
            "color": "#EEF",
          }
        }
      >
        Number of countries: 
      </Text>
      <Text
        style={
          {
            "color": "#EEF",
          }
        }
      >
        Number of languages: 
        0
      </Text>
      <Text
        style={
          {
            "color": "#EEF",
            "fontSize": 25,
          }
        }
      >
        Countries
      </Text>
    </React.Fragment>
  </ScrollView>
</BackgroundView>
`;

exports[`should render with ERROR response status 1`] = `
<BackgroundView>
  <View
    style={
      {
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "paddingHorizontal": 24,
        "width": "100%",
      }
    }
  >
    <Memo(Pressable)
      style={
        {
          "backgroundColor": "#049",
          "padding": 16,
        }
      }
    >
      <Text
        style={
          {
            "color": "#EEF",
          }
        }
      >
        Back
      </Text>
    </Memo(Pressable)>
    <View
      style={
        {
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "center",
        }
      }
    >
      <Text
        style={
          {
            "color": "#EEF",
            "fontSize": 30,
          }
        }
      />
    </View>
  </View>
  <ScrollView
    style={
      {
        "flex": 1,
        "gap": 8,
        "padding": 24,
      }
    }
  >
    <Text
      style={
        {
          "color": "#EEF",
        }
      }
    >
      Something went wrong
    </Text>
  </ScrollView>
</BackgroundView>
`;

exports[`should render with LOADING response status 1`] = `
<BackgroundView>
  <View
    style={
      {
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "flex-start",
        "paddingHorizontal": 24,
        "width": "100%",
      }
    }
  >
    <Memo(Pressable)
      style={
        {
          "backgroundColor": "#049",
          "padding": 16,
        }
      }
    >
      <Text
        style={
          {
            "color": "#EEF",
          }
        }
      >
        Back
      </Text>
    </Memo(Pressable)>
    <View
      style={
        {
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "center",
        }
      }
    >
      <Text
        style={
          {
            "color": "#EEF",
            "fontSize": 30,
          }
        }
      />
    </View>
  </View>
  <ScrollView
    style={
      {
        "flex": 1,
        "gap": 8,
        "padding": 24,
      }
    }
  >
    <ActivityIndicator
      size="large"
    />
  </ScrollView>
</BackgroundView>
`;
